move-lines: fix bug with trailing newline

https://bugzilla.gnome.org/show_bug.cgi?id=624963